--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ LOG_LEVEL=info
 
 # Database configuration
 DATABASE_URL=postgresql://neondb_owner:npg_vo4RBTNej5lH@ep-weathered-mode-adpiyjxu-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# ARCKJET KEY
+ARCJET_KEY=ajkey_01k5ehdpv9ejbvzspn4wbcjbyc
