--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Environment variables
+.env
 .env.*
+
+# Neon Local metadata
+.neon_local/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+
+# IDE files
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Optional npm cache
+.npm
+
+# Build outputs
+build/
+dist/
+out/
