--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "dev:docker": "sh ./scripts/dev.sh",
-    "prod:docker":"sh ./scripts/prod.sh",
+    "prod:docker": "sh ./scripts/prod.sh"
   },
   "repository": {
     "type": "git",
