--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ PORT=3000
 NODE_ENV=development
 LOG_LEVEL=info
 
+ARCJET_ENV=development
+
 # Database configuration
 DATABASE_URL=postgresql://neondb_owner:npg_vo4RBTNej5lH@ep-weathered-mode-adpiyjxu-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
